@@ -843,11 +843,11 @@ class Project extends CommonObject
     /**
      * Return array of projects a user has permission on, is affected to, or all projects
      *
-     * @param 	User	$user		User object
-     * @param 	int		$mode		0=All project I have permission on, 1=Projects affected to me only, 2=Will return list of all projects with no test on contacts
-     * @param 	int		$list		0=Return array,1=Return string list
-     * @param	int		$socid		0=No filter on third party, id of third party
-     * @return 	array 				Array of projects
+     * @param 	User	$user			User object
+     * @param 	int		$mode			0=All project I have permission on, 1=Projects affected to me only, 2=Will return list of all projects with no test on contacts
+     * @param 	int		$list			0=Return array,1=Return string list
+     * @param	int		$socid			0=No filter on third party, id of third party
+     * @return 	array 					Array of projects
      */
     function getProjectsAuthorizedForUser($user, $mode=0, $list=0, $socid=0)
     {
@@ -864,11 +864,9 @@ class Project extends CommonObject
             $sql.= ", " . MAIN_DB_PREFIX . "c_type_contact as ctc";
         }
         $sql.= " WHERE p.entity = " . $conf->entity;
-
         // Internal users must see project he is contact to even if project linked to a third party he can't see.
         //if ($socid || ! $user->rights->societe->client->voir)	$sql.= " AND (p.fk_soc IS NULL OR p.fk_soc = 0 OR p.fk_soc = ".$socid.")";
-        if ($socid)
-            $sql.= " AND (p.fk_soc IS NULL OR p.fk_soc = 0 OR p.fk_soc = " . $socid . ")";
+        if ($socid > 0) $sql.= " AND (p.fk_soc IS NULL OR p.fk_soc = 0 OR p.fk_soc = " . $socid . ")";
 
         if ($mode == 0)
         {
