@@ -33,6 +33,8 @@ $langs->load('projects');
 $langs->load('users');
 
 $id=GETPOST('id','int');
+$search_product=GETPOST('search_product');
+
 
 // Security check
 $socid=0;
@@ -46,6 +48,7 @@ $page = is_numeric($page) ? $page : 0;
 $page = $page == -1 ? 0 : $page;
 
 $mine = $_REQUEST['mode']=='mine' ? 1 : 0;
+
 
 
 /*
@@ -79,14 +82,18 @@ else
 
 // Get list of project id allowed to user
 $projectsListId = $projectstatic->getProjectsAuthorizedForUser($user,$mine,1,$socid);
+
 // Get list of tasks in tasksarray and taskarrayfiltered
-// We need all tasks (even not limited to a user because a task to user
-// can have a parent that is not affected to him).
-$tasksarray=$taskstatic->getTasksArray(0, 0, $projectstatic->id, $socid, 0);
+// We need all tasks (even not limited to a user because a task to user can have a parent that is not affected to him).
+$tasksarray=$taskstatic->getTasksArray(0, 0, $projectstatic->id, $socid, 0, $search_product);
 // We load also tasks limited to a particular user
 $tasksrole=($mine ? $taskstatic->getUserRolesForProjectsOrTasks(0,$user,$projectstatic->id,0) : '');
 
+print '<form method="POST" action="'.$_SERVER["PHP_SELF"].'">';
+print '<input type="hidden" name="mode" value="'.GETPOST('mode').'">';
+
 print '<table class="noborder" width="100%">';
+
 print '<tr class="liste_titre">';
 print '<td>'.$langs->trans("Project").'</td>';
 print '<td width="80">'.$langs->trans("RefTask").'</td>';
@@ -96,10 +103,23 @@ print '<td align="center">'.$langs->trans("DateEnd").'</td>';
 print '<td align="right">'.$langs->trans("Progress").'</td>';
 print '<td align="right">'.$langs->trans("TimeSpent").'</td>';
 print "</tr>\n";
+
+print '<tr class="liste_titre">';
+print '<td class="liste_titre">';
+print '<input type="text" class="flat" name="search_product" value="'.$search_product.'" size="8">';
+print '</td>';
+print '<td class="liste_titre" colspan="5">';
+print '&nbsp;';
+print '</td>';
+print '<td class="liste_titre" align="right"><input class="liste_titre" type="image" name="button_search" src="'.DOL_URL_ROOT.'/theme/'.$conf->theme.'/img/search.png" value="'.dol_escape_htmltag($langs->trans("Search")).'" title="'.dol_escape_htmltag($langs->trans("Search")).'"></td>';
+print "</tr>\n";
+
 // Show all lines in taskarray (recursive function to go down on tree)
 $j=0; $level=0;
 $nboftaskshown=projectLinesa($j, 0, $tasksarray, $level, true, 1, $tasksrole, $projectsListId);
 print "</table>";
+
+print '</form>';
 
 print '</div>';
 
